<resources>
    <string name="app_name">ComeJa</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_second">SecondActivity</string>

    <string name="action_second_activity">SecondActivity</string>

    <string name="action_facebook">Facebook</string>

    <string name="action_youtube">YouTube</string>

    <string name="action_google_plus">Google Plus</string>

    <string name="action_linkedin">LinkedIn</string>

    <string name="action_whatsapp">WhatsApp</string>
    <string name="login">Email</string>
    <string name="logotipo">Logotipo</string>
    <string name="senha">Senha</string>
    <string name="acessar">AcessarJa</string>
    <string name="adicionar">AdicioneJá</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome:</string>
    <string name="cpf">CPF:</string>
    <string name="rg">RG:</string>
    <string name="telefone_fixo">Telefone Fixo:</string>
    <string name="telefone_celular">Telefone Celular:</string>
    <string name="email">Email:</string>
    <string name="confirmar_senha">Confirmar Senha:</string>
    <string name="rua">Logradouro:</string>
    <string name="numero">Numero:</string>
    <string name="bairro">Bairro:</string>
    <string name="cidade">Cidade:</string>
    <string name="estado">Estado:</string>
    <string name="complemento">Complemento:</string>
    <string name="cep">CEP</string>
    <string name="endereco">CADASTRO ENDEREÇO</string>
    <string name="cadastrar">CadastrarJa</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="buscar_por_cidade">Buscar por cidade</string>
    <string name="termos">Eu li e aceito os termos e condições de uso do site</string>
    <string name="endere_o_para_entrega">Endereço para Entrega</string>
    <string name="finalizar_pedido">Finalizar Pedido</string>
    <string name="forma_de_pagamento">Forma de pagamento</string>
    <string name="para_cadastrar_um_novo_endere_o_para_entrega_basta_clica_em_menu_e_ir_na_aba_endere_os">Para cadastrar um novo endereço para entrega basta clicar em \'Menu\' e ir na aba Endereços</string>
    <string name="troco_para">Troco para:</string>
    <item  name="valor" type="id"/>
    <item  name="tamanho" type="id"/>
</resources>
