<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UsuarioFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <com.devspark.robototextview.widget.RobotoTextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23dp"
                android:id="@+id/txtHome"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:fontFamily="roboto"
                app:textWeight="light"
                android:text="Cadastro de Usuário"
                app:textStyle="normal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome"/>
            <EditText
                android:textColor="@android:color/black"
                android:id="@+id/nomePessoa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />



            <TextView
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefone_fixo"/>
            
            <EditText
                android:textColor="@android:color/black"
                android:id="@+id/telefoneFixo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefone_celular"/>
            <EditText
                android:textColor="@android:color/black"
                android:id="@+id/telefoneCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />


            <TextView
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"/>
            <EditText
                android:textColor="@android:color/black"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_nascimento"/>
            <EditText
                android:textColor="@android:color/black"
                android:id="@+id/dataNasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/senha"/>
            <EditText
                android:textColor="@android:color/black"
                android:id="@+id/senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmar_senha"/>

            <EditText
                android:textColor="@android:color/black"
                android:id="@+id/confirmaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/termos"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <CheckBox
                android:id="@+id/checkboxTermos"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termos"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/salvar" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

