<?xml version="1.0"?>

<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".LoginActivity"
    android:background="@color/red">

    <android.support.v7.widget.Toolbar
        android:background="?attr/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:elevation="4dp"
        android:id="@+id/tb_main" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_below="@id/tb_main"
        android:gravity="center_vertical"
        android:fillViewport="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                android:contentDescription="@string/logotipo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/txtLogin"
                android:textColor="@color/cardview_light_background"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtLogin"
                android:textColor="@color/cardview_light_background"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senha"
                android:textColor="@color/cardview_light_background"
                android:id="@+id/txtSenha"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtSenha"
                android:textColor="@color/cardview_light_background"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:inputType="textPassword" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnAcessar"
                android:textColor="@color/red"
                android:background="@color/cardview_light_background"
                android:text="@string/acessar"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnCadastrar"
                android:textColor="@color/red"
                android:background="@color/cardview_light_background"
                android:text="@string/cadastrar"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/inc_tb_bottom"
        layout="@layout/toolbar_bottom" />
</RelativeLayout>